TODOlist proposal + coding threads, graphs

--- a/Project-Proposal/proposal.tex
+++ b/Project-Proposal/proposal.tex
@@ -1,14 +1,17 @@
 \documentclass{article}
 \usepackage{fancyref}
+\usepackage{todonotes}
 
 \title{Project Proposal \\ Using Agents and Genetic Algorithms to model, analyse and improve strategies for trading on an online auction site with feedback and reputation systems}
 \author{Christopher Taylor \\ Department of Computer Science \\ University of Bath \\ ct345@bath.ac.uk}
 
 \begin{document}
 \maketitle
+\todo{better title}
+\listoftodos
 \section{Problem Description}
 \label{sec:problem-description}
-Online auction websites - such as eBay - give users the opportunity to trade with eachother. Whilst this functionality is wonderful in terms of blah blah blah
+Online auction websites - such as eBay - give users the opportunity to trade with eachother. Whilst this functionality is wonderful in terms of blah blah blah \todo{Talk about fraud on online marketplaces}
 
 This project will create an abstract model of an online auction environment and use this to explore different strategies for both genuine and malicious users. This project spans mutliple Computer Science and Mathematical topics, including: Game Theory, Intelligent Agents and Genetic Algortihms.
 \subsection{The Auction Model}
@@ -48,6 +51,8 @@ As previously discussed, this model is very much an abstraction rather than a fa
 
 Despite these limitations, I believe the model still has value as an analytical tool.
 
+\todo{Expand justification}
+
 \subsubsection{Game Theory Analysis}
 \label{sec:game-theory}
 Each individual transaction decision is typical of a Prisoner's Dilemma, and as such we can learn from the well-developed thought that surrounds that problem.
@@ -81,16 +86,22 @@ The most simple strategies are a naive \emph{always cooperate} or \emph{always d
 	\item[Grim Trigger] - Cooperate until opponent defects, then defect forever.
 \end{description}
 
+\todo{How this problem is similar/different from this standard prisoner's dilemma}
+
 \subsubsection{Psychology and Sociology of cooperation}
 \label{sec:psychology-sociology-cooperation}
+\todo{Psychology and Sociology of cooperation, including lots of references to Liars and Outliers. \\ Read this as "why all the game theory is wrong when applied to humans."}
 
 \subsection{Genetic Algorithms}
 \label{sec:genetic-algorithms}
+\todo{Genetic Algorithms: what they are, why I'm using them.}
 
 \section{Requirements}
 \label{sec:requirements}
+\todo{Requirements.}
 
 \section{Project Plan}
 \label{sec:project-plan}
+\todo{Project Plan}
 
 \end{document}
