--- a/Project-Proposal/proposal-cites.bib
+++ b/Project-Proposal/proposal-cites.bib
@@ -2,13 +2,36 @@
 % Encoding: UTF-8
 
 
+@Article{gregg2008typology,
+  Title                    = {A typology of complaints about eBay sellers},
+  Author                   = {Gregg, Dawn G and Scott, Judy E},
+  Journal                  = {Communications of the ACM},
+  Year                     = {2008},
+  Number                   = {4},
+  Pages                    = {69--74},
+  Volume                   = {51},
+
+  Publisher                = {ACM}
+}
+
+@Article{gregg2006role,
+  Title                    = {The role of reputation systems in reducing on-line auction fraud},
+  Author                   = {Gregg, Dawn G and Scott, Judy E},
+  Journal                  = {International Journal of Electronic Commerce},
+  Year                     = {2006},
+  Number                   = {3},
+  Pages                    = {95--120},
+  Volume                   = {10},
+
+  Publisher                = {ME Sharpe}
+}
+
 @Book{Schneier2012,
   Title                    = {Liars and Outliers: Enable the Trust that Society Needs to Thrive},
   Author                   = {bruce Schneier},
   Publisher                = {Wiley},
   Year                     = {2012},
 
-  Owner                    = {chale},
   Timestamp                = {2014.10.16}
 }
 
