--- a/Project-Proposal/proposal-cites.bib
+++ b/Project-Proposal/proposal-cites.bib
@@ -35,3 +35,15 @@
   Timestamp                = {2014.10.16}
 }
 
+@Article{stewart2013extortion,
+  Title                    = {From extortion to generosity, evolution in the iterated prisoner’s dilemma},
+  Author                   = {Stewart, Alexander J and Plotkin, Joshua B},
+  Journal                  = {Proceedings of the National Academy of Sciences},
+  Year                     = {2013},
+  Number                   = {38},
+  Pages                    = {15348--15353},
+  Volume                   = {110},
+
+  Publisher                = {National Acad Sciences}
+}
+
