--- a/Project-Proposal/proposal-cites.bib
+++ b/Project-Proposal/proposal-cites.bib
@@ -2,6 +2,30 @@
 % Encoding: UTF-8
 
 
+@Article{fehr2003nature,
+  Title                    = {The nature of human altruism},
+  Author                   = {Fehr, Ernst and Fischbacher, Urs},
+  Journal                  = {Nature},
+  Year                     = {2003},
+  Number                   = {6960},
+  Pages                    = {785--791},
+  Volume                   = {425},
+
+  Publisher                = {Nature Publishing Group}
+}
+
+@Article{forsythe1994fairness,
+  Title                    = {Fairness in simple bargaining experiments},
+  Author                   = {Forsythe, Robert and Horowitz, Joel L and Savin, Nathan E and Sefton, Martin},
+  Journal                  = {Games and Economic behavior},
+  Year                     = {1994},
+  Number                   = {3},
+  Pages                    = {347--369},
+  Volume                   = {6},
+
+  Publisher                = {Elsevier}
+}
+
 @Article{gregg2008typology,
   Title                    = {A typology of complaints about eBay sellers},
   Author                   = {Gregg, Dawn G and Scott, Judy E},
@@ -33,6 +57,15 @@
   Year                     = {2012},
 
   Timestamp                = {2014.10.16}
+}
+
+@Article{smith1973lhe,
+  Title                    = {The Logic of Animal Conflict},
+  Author                   = {Smith, J Maynard and Price, GR},
+  Journal                  = {Nature},
+  Year                     = {1973},
+  Pages                    = {15},
+  Volume                   = {246}
 }
 
 @Article{stewart2013extortion,
