--- a/Project-Proposal/proposal.tex
+++ b/Project-Proposal/proposal.tex
@@ -119,8 +119,7 @@ Prisoner's Dilemmas involve a risk trade-off between group interest and self-int
 
 With a purely rational, purely calculative, maximising of self-interest approach - the trust required for the everyday tasks of civilisation (such as buying something in a shop), and civilisation itself, breaks down. It is lucky, then, that most people do not take this approach - we, as humans, have a wide range of conflicting motivations and pressures that influence our decisions.
 
-Relating this back to the auction service problem: this means that the majority of users won't be out to scam others. In \cite{gregg2008typology}, the ra
-te of accusations of fraud is $0.2%$, with official eBay estimates at $0.01%$ - the true value being difficult to ascertain due to the difficulty in establishing the validity of a large number of claims, but it is obvious that the vast majority of transactions are \emph{not} fraudulent. This is obviously a positive thing for the platform, as too high a chance of being defrauded is likely to drive people away.
+Relating this back to the auction service problem: this means that the majority of users won't be out to scam others. In \cite{gregg2008typology}, the rate of accusations of fraud is 0.2\%, with official eBay estimates at 0.01\%. The true value being difficult to ascertain due to the difficulty in establishing the validity of a large number of claims, but it is obvious that the vast majority of transactions are \emph{not} fraudulent. This is obviously a positive thing for the platform, as too high a chance of being defrauded is likely to drive people away.
 
 In terms of our agents, it means that the majority of the agents at the start of the scenarios will be genuine users with only a few malicious agents. They will be described using terms of the "Hawk-Dove game" \cite{smith1973lhe}, a prisoner's dilemma-like game on a population level. The agent types are:
 \begin{description}
