Draft of proposal

--- a/Project-Proposal/proposal-cites.bib
+++ b/Project-Proposal/proposal-cites.bib
@@ -50,9 +50,21 @@
   Publisher                = {ME Sharpe}
 }
 
+@Article{hoffman2009survey,
+  Title                    = {A survey of attack and defense techniques for reputation systems},
+  Author                   = {Hoffman, Kevin and Zage, David and Nita-Rotaru, Cristina},
+  Journal                  = {ACM Computing Surveys (CSUR)},
+  Year                     = {2009},
+  Number                   = {1},
+  Pages                    = {1},
+  Volume                   = {42},
+
+  Publisher                = {ACM}
+}
+
 @Book{Schneier2012,
   Title                    = {Liars and Outliers: Enable the Trust that Society Needs to Thrive},
-  Author                   = {bruce Schneier},
+  Author                   = {Bruce Schneier},
   Publisher                = {Wiley},
   Year                     = {2012},
 
