--- a/Project-Proposal/proposal.tex
+++ b/Project-Proposal/proposal.tex
@@ -61,7 +61,7 @@ As previously discussed, this model is very much an abstraction rather than a fa
 	\item In the actual eBay system, sellers post an item for sale and buyers choose whether or not to purchase them (taking into account things such as desire for the item and the reputation of the user.) In addition, only buyers are allows to post feedback on sellers. In this model, there is no role for "buyer" or "seller" - just two agents participating in a transaction.
 \end{itemize}
 
-Despite these limitations, I believe the model still has value as an analytical tool.
+Despite these limitations, I believe the model is a useful tool and an interesting game to study.
 
 \todo{Expand justification}
 
